Adiciona módulo de oficinas com componentes, serviços e estilos. Implementa listagem, criação, edição e exclusão de oficinas, além de integração com a API para gerenciamento de pneus.

--- a/frota-pro/src/app/features/dashboard/dashboard/dashboard.html
+++ b/frota-pro/src/app/features/dashboard/dashboard/dashboard.html
@@ -69,7 +69,7 @@
         <ul class="submenu" *ngIf="submenuOficinaAberto && !isClosed">
           <li routerLink="/dashboard/manutencoes" routerLinkActive="active">Manutenções</li>
           <li routerLink="/dashboard/oficinas" routerLinkActive="active">Oficinas</li>
-          <li routerLink="/dashboard/pneus-vida-util" routerLinkActive="active">Vida Útil do Pneu</li>
+          <li routerLink="/dashboard/pneus" routerLinkActive="active">Vida Útil do Pneu</li>
         </ul>
 
       </li>
